--- a/CoreService/CoreService.csproj
+++ b/CoreService/CoreService.csproj
@@ -80,6 +80,16 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\corelib.interchange\corelib.interchange.csproj">
+      <Project>{4ea1bc0d-a4bc-4646-a571-9c00f4fad9ce}</Project>
+      <Name>corelib.interchange</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\corelib\corelib.csproj">
+      <Project>{24cdfe16-ea5c-428e-b6bc-3c8fcf73aa3b}</Project>
+      <Name>corelib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
