Changeset: 5 Changeset: 5 improvements, migrated to service

--- a/idx/idx.csproj
+++ b/idx/idx.csproj
@@ -32,9 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Blackbird.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\blackbird\Blackbird.Core\bin\Debug\Blackbird.Core.dll</HintPath>
+    <Reference Include="Blackbird.Core">
+      <HintPath>..\Blackbird.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
