--- a/CoreService/Web.config
+++ b/CoreService/Web.config
@@ -16,6 +16,7 @@
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <!-- Per ricevere i dettagli sull'eccezione per scopi di debug in caso di guasti, impostare il valore riportato sotto su true. Impostarlo su false prima della distribuzione per evitare di diffondere informazioni sull'eccezione -->
           <serviceDebug includeExceptionDetailInFaults="false"/>
+          <dataContractSerializer maxItemsInObjectGraph="1048576"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
