Changeset: 6 Changeset: 6 improvements to InterchangeDocument management

--- a/CoreService/Web.config
+++ b/CoreService/Web.config
@@ -3,6 +3,7 @@
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="indexFolder" value="e:\projects_personal\infostream\idx\bin\Debug\index.lif" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
