Changeset: 8 Changeset: 8 iniziato lavoro su M2

--- a/corelib.interchange/corelib.interchange.csproj
+++ b/corelib.interchange/corelib.interchange.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataInterchange.cs" />
+    <Compile Include="IXDB.cs" />
+    <Compile Include="IXDQ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures.cs" />
   </ItemGroup>
