--- a/idx/ISClient.csproj
+++ b/idx/ISClient.csproj
@@ -7,14 +7,16 @@
     <ProjectGuid>{00327A43-7A22-4AF1-B4F1-005073440A45}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>idx</RootNamespace>
-    <AssemblyName>idx</AssemblyName>
+    <RootNamespace>ISClient</RootNamespace>
+    <AssemblyName>ISClient</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>PlasticSCM</SccProjectName>
     <SccLocalPath>PlasticSCM</SccLocalPath>
     <SccAuxPath>PlasticSCM</SccAuxPath>
     <SccProvider>Plastic SCM Source Control Service:{774e58ba-f1b9-40a7-b676-834fa2c220fe}</SccProvider>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -22,7 +24,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;DATAFEED_TVC</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -39,6 +41,9 @@
     <Reference Include="Blackbird.Core">
       <HintPath>..\Blackbird.Core.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net40\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -52,14 +57,85 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="contenuti.cs">
+      <DependentUpon>netmovie2.tt</DependentUpon>
+    </Compile>
+    <Compile Include="contenuti_dettagli.cs">
+      <DependentUpon>netmovie2.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataFeed.cs" />
     <Compile Include="DataFeedContext.cs" />
+    <Compile Include="netebook.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>netebook.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="netebook.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>netebook.tt</DependentUpon>
+    </Compile>
+    <Compile Include="netebook.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>netebook.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="netmovie2.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>netmovie2.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="netmovie2.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>netmovie2.tt</DependentUpon>
+    </Compile>
+    <Compile Include="netmovie2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>netmovie2.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleDataFeed.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="netmovie2.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>netmovie2.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <EntityDeploy Include="netebook.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>netebook.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="netebook.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>netebook.edmx</DependentUpon>
+      <LastGenOutput>netebook.Context.cs</LastGenOutput>
+    </None>
+    <None Include="netebook.edmx.diagram">
+      <DependentUpon>netebook.edmx</DependentUpon>
+    </None>
+    <None Include="netebook.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>netebook.edmx</DependentUpon>
+      <LastGenOutput>netebook.cs</LastGenOutput>
+    </None>
+    <None Include="netmovie2.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>netmovie2.Context.cs</LastGenOutput>
+      <DependentUpon>netmovie2.edmx</DependentUpon>
+    </None>
+    <None Include="netmovie2.edmx.diagram">
+      <DependentUpon>netmovie2.edmx</DependentUpon>
+    </None>
+    <None Include="netmovie2.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>netmovie2.edmx</DependentUpon>
+      <LastGenOutput>netmovie2.cs</LastGenOutput>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -69,12 +145,13 @@
       <Project>{4ea1bc0d-a4bc-4646-a571-9c00f4fad9ce}</Project>
       <Name>ISMetadataLib</Name>
     </ProjectReference>
-    <ProjectReference Include="..\corelib\corelib.csproj">
+    <ProjectReference Include="..\corelib\ISCore.csproj">
       <Project>{24cdfe16-ea5c-428e-b6bc-3c8fcf73aa3b}</Project>
       <Name>corelib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
