--- a/idx/App.config
+++ b/idx/App.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="netmovie2Entities" connectionString="metadata=res://*/NetMovie.csdl|res://*/NetMovie.ssdl|res://*/NetMovie.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=172.17.0.197;user id=netmovie;password=hr1398rxn!;persist security info=True;database=netmovie2&quot;" providerName="System.Data.EntityClient" />
-    <add name="DataFeedContext" connectionString="Data Source=test.sdf;Password=dbAdmin13" providerName="System.Data.SqlServerCe.4.0" />
+    <add name="netmovie2Entities" connectionString="metadata=res://*/netmovie2.csdl|res://*/netmovie2.ssdl|res://*/netmovie2.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=172.17.0.197;user id=netmovie;password=hr1398rxn!;persist security info=True;database=netmovie2&quot;" providerName="System.Data.EntityClient" />
+    <add name="netbookEntities" connectionString="metadata=res://*/netebook.csdl|res://*/netebook.ssdl|res://*/netebook.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=172.17.0.197;user id=netbook;password=24njk235!bjk;persist security info=True;database=netbook&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
