Changeset: 17 ripulitura per ripristino sviluppo

--- a/CoreService/Web.config
+++ b/CoreService/Web.config
@@ -1,31 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
-
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-    <add key="indexFolder" value="e:\projects_personal\infostream\idx\bin\Debug\index.lif" />
+    <add key="indexFolder" value="C:\projects\skunkworks\index.lif"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.0"/>
+    <httpRuntime/>
   </system.web>
+  
   <system.serviceModel>
+    <services>
+      <service name="CoreService.InfoStreamService">
+        <endpoint address="" binding="basicHttpBinding" contract="InfoStream.Metadata.IInfoStreamService" />
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
           <!-- Per evitare la diffusione di informazioni sui metadati, impostare i valori seguenti su false prima della distribuzione -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="false"/>
           <!-- Per ricevere i dettagli sull'eccezione per scopi di debug in caso di guasti, impostare il valore riportato sotto su true. Impostarlo su false prima della distribuzione per evitare di diffondere informazioni sull'eccezione -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true" />
           <dataContractSerializer maxItemsInObjectGraph="1048576"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+      <add binding="basicHttpBinding" scheme="http"/>
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="false" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
+  
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
     <!--
@@ -34,5 +39,4 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
-
 </configuration>
