--- a/corelib/ISCore.csproj
+++ b/corelib/ISCore.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>InfoStream.Core</RootNamespace>
-    <AssemblyName>corelib</AssemblyName>
+    <AssemblyName>ISCore</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
