--- a/idx/packages.config
+++ b/idx/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="EntityFramework.it" version="5.0.0" targetFramework="net40" />
+  <package id="Zlib.Portable" version="1.9.2" targetFramework="net40" />
 </packages>
