--- a/idxws/app.config
+++ b/idxws/app.config
@@ -3,24 +3,22 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IService1" maxBufferSize="1048576" maxReceivedMessageSize="1048576">
-          <readerQuotas maxArrayLength="1048576" maxDepth="1048576" maxStringContentLength="1048576" />
-        </binding>
+        <binding name="BasicHttpBinding_IInfoStreamService" />
       </basicHttpBinding>
     </bindings>
     
     <behaviors>
       <endpointBehaviors>
-        <behavior name="Behaviour_IService1">
+        <behavior name="Behaviour_IInfoStreamService">
           <dataContractSerializer maxItemsInObjectGraph="1048576"/>
         </behavior>
       </endpointBehaviors>
     </behaviors>
 
     <client>
-      <endpoint address="http://localhost:51043/Service1.svc" binding="basicHttpBinding"
-          bindingConfiguration="BasicHttpBinding_IService1" contract="CoreService.IService1" behaviorConfiguration="Behaviour_IService1"
-          name="BasicHttpBinding_IService1" />
+      <endpoint address="http://localhost:51043/InfoStreamService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IInfoStreamService" behaviorConfiguration="Behaviour_IInfoStreamService"
+        contract="CoreService.IInfoStreamService" name="BasicHttpBinding_IInfoStreamService" />
     </client>
   </system.serviceModel>
 </configuration>
