--- a/idxws/idxws.csproj
+++ b/idxws/idxws.csproj
@@ -36,9 +36,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Blackbird.Core">
-      <HintPath>..\Blackbird.Core.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -59,6 +56,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\blackbird\Blackbird.Core\Blackbird.Core.csproj">
+      <Project>{4278cd77-6b5e-4f69-a2d9-ab659d38ce3a}</Project>
+      <Name>Blackbird.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\corelib.interchange\ISMetadataLib.csproj">
       <Project>{4ea1bc0d-a4bc-4646-a571-9c00f4fad9ce}</Project>
       <Name>ISMetadataLib</Name>
