Changeset: 20 use the new wcf connection infrastructure from BB.Core

--- a/CoreService/Web.config
+++ b/CoreService/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="indexFolder" value="E:\projects_personal\infostream\idx\bin\Debug\index.lif"/>
+    <add key="indexFolder" value="C:\projects\skunkworks\index.lif"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
