--- a/tests/fluenttest/fluenttest.csproj
+++ b/tests/fluenttest/fluenttest.csproj
@@ -34,9 +34,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Elasticsearch.Net, Version=1.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Elasticsearch.Net.1.0.0-beta1\lib\Elasticsearch.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="Nest, Version=1.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\NEST.1.0.0-beta1\lib\Nest.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Newtonsoft.Json.6.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,14 +63,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\NEST\src\Elasticsearch.Net\Elasticsearch.Net.csproj">
-      <Project>{e97ccf40-0ba6-43fe-9f2d-58d454134088}</Project>
-      <Name>Elasticsearch.Net</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\NEST\src\Nest\Nest.csproj">
-      <Project>{072ba7da-7b60-407d-8b6e-95e3186be70c}</Project>
-      <Name>Nest</Name>
-    </ProjectReference>
     <ProjectReference Include="..\dataesextensions\dataesextensions.csproj">
       <Project>{56777f9b-a943-4cd3-b9f7-f252e690ea62}</Project>
       <Name>dataesextensions</Name>
